# crystal-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: new-project.md  run-tests.md
expenses_automation/: README.md  __init__.py  main.py
python/_template/: README.md
python/_template/src/: config.py  utils.py
python/_template/tests/: test_example.py
python/baseball_promos/: README.md  __main__.py  run.py
python/baseball_promos/docs/: scraper_tutorial.md
python/baseball_promos/src/: calendar_sync.py  config.py  main.py  models.py  storage.py  utils.py
python/baseball_promos/src/scrapers/: __init__.py  base.py  cyclones.py  mets.py  yankees.py
shared/: __init__.py  config.py  utils.py
tests/: test_extract_amount.py  test_label_and_query_top.py
